New: Move fanout on write to Firebase functions

--- a/src/index.html
+++ b/src/index.html
@@ -258,7 +258,7 @@
 											<label for="inspectionTime" i18n-key="inspectionTime">Inspection time</label>
 										</div>
 										<div class="input-field col s8">
-											<select id="inspectionTime" class="browser-default">
+											<select id="inspectionTime">
 												<option value="0" i18n-key="inspectionTimeNone">None</option>
 												<option value="3" i18n-key="inspectionTime3Seconds">3 seconds</option>
 												<option value="5" i18n-key="inspectionTime5Seconds">5 seconds</option>
