New: Add routes util

--- a/src/index.html
+++ b/src/index.html
@@ -53,11 +53,11 @@
 			</div>
 		</li>
 		<li class="auth-google-signed-in">
-			<a class="google-sign-out blue-text" i18n-key="authSignOut">Sign out</a>
+			<a class="google-sign-out blue-text text-darken-2" i18n-key="authSignOut">Sign out</a>
 		</li>
 	</ul>
 	<div class="navbar-fixed">
-		<nav class="blue" role="navigation">
+		<nav class="blue darken-2" role="navigation">
 			<div class="nav-wrapper">
 				<a id="main-menu" href="#" data-activates="nav-mobile" class="button-collapse hide-on-large-only waves-effect waves-light">
 					<i class="material-icons">menu</i>
@@ -108,7 +108,7 @@
 						</a>
 					</li>
 					<li>
-						<a class="config-button waves-effect waves-light" href="#!/config">
+						<a class="config-button waves-effect waves-light" href="#!config">
 							<i class="material-icons left">settings</i>
 							<span i18n-key="config">Settings</span>
 						</a>
@@ -214,8 +214,8 @@
 						<div><span class="material-icons">assessment</span></div>
 						<p i18n-key="scoresEmpty">Nothing to see here, yet.</p>
 					</div>
-					<div id="results-content" style="display: none">
-						<div class="card card-stats">
+					<div id="results-content">
+						<div class="card card-timeline">
 							<div class="card-image">
 								<div id="ct-timeline" class="ct-major-twelfth ct-stats"></div>
 							</div>
@@ -399,7 +399,7 @@
 		<div class="modal-content">
 			<h4 class="modal-title">Import Times</h4>
 			<div class="btn-group" role="group">
-				<button id="import-from-file" type="button" class="btn btn-default blue">
+				<button id="import-from-file" type="button" class="btn btn-default blue darken-2">
 					<i class="material-icons left">file_upload</i>
 					Load from local file
 				</button>
@@ -478,7 +478,7 @@
 	<!-- /.modal -->
 
 	<div style="display: none">
-		<input id="import-file" type="file" class="blue">
+		<input id="import-file" type="file" class="blue darken-2">
 	</div>
 </body>
 
